force-app/main/default/objects/Expense_Item__c/Expense_Item__c.object-meta.xml
<CustomObject>
    <description>CFR Database - to store Investment details</description>
    <label>Expense Item</label>
    <nameField>
        <displayFormat>EI-{00000000}</displayFormat>
        <label>Expense Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>