force-app/main/default/objects/Expense_Item__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>Expense Budget Number</description>
    <inlineHelpText>Expense Budget Number</inlineHelpText>
    <label>BU#</label>
    <length>8</length>
    <type>Text</type>
</CustomField>