force-app/main/default/objects/Expense_Item__c/fields/Capital_Request__c.field-meta.xml
<CustomField>
    <fullName>Capital_Request__c</fullName>
    <label>Capital Request</label>
    <referenceTo>Capital_Requests__c</referenceTo>
    <relationshipLabel>Expense Items</relationshipLabel>
    <relationshipName>Expense_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>