force-app/main/default/objects/Expense_Item__c/fields/Expense_Item__c.field-meta.xml
<CustomField>
    <fullName>Expense_Item__c</fullName>
    <label>Expense Item</label>
    <type>TextArea</type>
</CustomField>