force-app/main/default/objects/Expense_Item__c/fields/Expense_ItemLink__c.field-meta.xml
<CustomField>
    <fullName>Expense_ItemLink__c</fullName>
    <formula>HYPERLINK( Id, Expense_Item__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Item</label>
    <type>Text</type>
</CustomField>