force-app/main/default/objects/Expense_Item__c/fields/Is_Supplemental__c.field-meta.xml
<CustomField>
    <fullName>Is_Supplemental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Supplemental ?</label>
    <type>Checkbox</type>
</CustomField>