force-app/main/default/objects/Expense_Item__c/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>