force-app/main/default/objects/Expense_Item__c/fields/Total_for_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Total_for_Rollup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total for Rollup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>