force-app/main/default/objects/Expense_Item__c/validationRules/Supplemental_should_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Supplemental_should_be_greater_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>(Supplemental__c &gt; 0 &amp;&amp; NOT(Is_Supplemental__c)) || (Supplemental__c = 0 &amp;&amp; (Is_Supplemental__c))</errorConditionFormula>
    <errorDisplayField>Is_Supplemental__c</errorDisplayField>
    <errorMessage>Is Supplemental Flag should be checked when entering a supplemental dollar amount.</errorMessage>
</ValidationRule>